# texp

./: .gitignore  Cargo.toml  LICENSE  README.md  commands.sh
playground/: negative-binomial.py.ipynb
src/: common.rs  diff_exp.rs  errors.rs  group_expression.rs  group_means.rs  kallisto.rs  main.rs  normalize.rs  preprocess.rs  prior.rs  prob_distribution_1d.rs  prob_distribution_2d.rs  query_points.rs  reduce_features.rs  sample_expression.rs  write_fold_changes.rs
