[package]
name = "bexp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
anyhow = "1.0"
thiserror = "1.0"
hdf5 = { git = "https://github.com/aldanor/hdf5-rust", branch = "master"}
ndarray = { version = "0.15", features = ["serde"] }
ndarray-stats = "0.5"
noisy_float = { version = "0.2", features = ["serde"] }
serde = "1.0"
serde_derive = "1.0"
rmp-serde = "0.15"
itertools-num = "0.1"
statrs = "0.15"
bio = "0.37"
getset = "0.1"
derive-new = "0.5"
derefable = "0.1"